log all, "smart" filters, updated Help for filters

--- a/help.html
+++ b/help.html
@@ -22,6 +22,9 @@ Next choose which flight schedules will be exported (all flights in the table be
 The <b>Filters</b> help you display flight schedules that fulfill your criteria.
 <br/>
 In the filter fields, enter airport, time, type or airline and click <b>Show</b>. The airport names are standard ICAO, the airline names are standard ICAO, and the aircraft type are standard IATA. Times are format <b>HH:MM</b>. The day is a number from 0 to 6, with 0 being Sunday.
+<br/>
+<b>"Smart"</b> filters are available for the <i>callsign, departure time, departure day, arrival time, arrival day</i> fields. To use them, input only part of the string you want to search for, like for instance <b>10:</b>, which will fetch all flights with departing hour 10, or <b>:30</b> which will fetch all flights departing at hour:30 minutes. This is the case for the day too, if you want to search for flights that take place on Sunday but not on Monday, you would enter <b>0.</b> - notice the dot after 0. The callsign can also be entered partially, for instance <b>SpeedBird</b> which will fetch BAW flights.
+<br/>
 To clear the table view and the filter form, click <b>Clear</b>.
 <br/>
 </p>
