--- a/help.html
+++ b/help.html
@@ -27,6 +27,9 @@ In the filter fields, enter airport, time, type or airline and click <b>Show</b>
 <br/>
 To clear the table view and the filter form, click <b>Clear</b>.
 <br/>
+<h4>Known issues:</h4>
+Export only works for the whole database and is very slow.<br/>
+If you order the table by a column other than id and then apply filters, the table will be corrupted. To solve this, simply order by id again, then order by the column you want.
 </p>
 <p>
 The <b>Empty database</b> button truncates the Flights database table, leaving an empty slate. Use with care.
