--- a/help.html
+++ b/help.html
@@ -1,12 +1,12 @@
 <h3>ScheduleViewer Help</h3>
 <b>Basic usage:</b><br/>
+<p><b>Important:</b> You must first edit the <b>settings</b> file and enter the path of your FGFS data directory. This is required for livery checking and aircraft conf exporting.</p>
 <i>Import schedules in *.conf format:</i>
 <p>
 Go to <b>File -> Import</b> and choose the path (directory) where to look for conf files.
 Leave empty the <b>Depth level</b> field to look only in this directory. Enter a number in this field to make
 the import tool search all directories <b>below</b> the selected one, at the level you give via this number.
 For example, if you enter <b>1</b>, the import tool will look in all subdirectories of the specified path, but <b>not</b> in the specified directory, or in any subdirectories nested at a depth greater than 1.<br/>This is usefull if you have cloned the AI schedule repository, and you want to scan all directories of airlines it includes, without scanning the root directory or the subdirectories which contain separate files for each airline resulting from a common PDF timetable.
-<br/>
 </p>
 <br/>
 <i>Export schedules from the database in *.conf format</i>
@@ -37,8 +37,16 @@ The <b>Empty database</b> button truncates the Flights database table, leaving a
 You can select multiple flights at the same time with CTRL and SHIFT to delete. The Del key is a shortcut for the delete button. You will not be asked again so be carefull.<br/>
 Double click a table field to edit it, when you are finished press <b>Enter</b>.
 </p>
+<p>To add a new flight, enter the flight information in the filter fields, then press <b>Add flight</b>. Thorough input checking is not yet implemented so be careful.
+</p>
+<p>In the <i>Aircraft</i> tab, the button <b>Add missing aircraft</b> will trigger a database check for all aircraft types present in the flight schedules table, and add those missing into the table <i>aircraft</i>.
+</p>
+<p>Fleet designation column color coding: <b>GREEN</b>=model livery was found in FGDATA path; <b>RED</b>=model livery was not found. If all entries in the <i>Designation</i> column are red, check you FGDATA path in the <b>settings</b> file. It is most likely wrong.
+</p>
+<p>The <b>Generate aircraft conf</b> button on the fleet tab lets you export aircraft .conf for the selected airline. You must have a valid airline entered in the <b>Airline</b> field. If your FGDATA path is not set correctly in the <b>settings</b> file, there will be no valid model liveries and export will fail.
+</p>
 <h4>Known issues:</h4>
-If you order the table by a column other than id and then apply filters, the table will be corrupted. To solve this, simply order by id again, then order by the column you want. The table will display normally.
+If you order the table by a column other than id and then apply filters, the table will be corrupted. To solve this, simply order by id again, click <b>Show</b> then order by the column you want. The table will display normally.
 <br/>
 <h3>Getting more help and reporting bugs</h3>
 
