Export one airline flightplan, move to FGDATA option, updated doc

--- a/help.html
+++ b/help.html
@@ -1,6 +1,8 @@
 <h3>ScheduleViewer Help</h3>
 <b>Basic usage:</b><br/>
-<p><b>Important:</b> You must first edit the <b>Settings</b> (Edit -> Settings menu) and enter the path of your FGFS data directory. This is required for livery checking and aircraft conf exporting.</p>
+<p><b>Important:</b> You must first edit the <b>Settings</b> (Edit -> Settings menu) and enter the path of your FGFS data directory. This is required for livery checking and aircraft conf exporting.<br/>
+You may also select the checkbox to move flightplans to FGDATA directory as soon as they are generated, but be very careful, unless you know exactly what you are doing, as you may overwrite existing flightplans.
+</p>
 <i>Import schedules in *.conf format:</i>
 <p>
 Go to <b>File -> Import</b> and choose the path (directory) where to look for conf files.
