Solved "sorting and update corrupts table" bug

--- a/help.html
+++ b/help.html
@@ -50,7 +50,7 @@ Double click a table field to edit it, when you are finished press <b>Enter</b>.
 <p>The <b>Generate flight plans</b> button on the fleet tab lets you export flightplans in XML format for the selected airline or all airlines. To generate only one airline, you must have a valid airline entered in the <b>Airline</b> field. If your FGDATA path is not set correctly in the <b>settings</b> file, there will be no valid model liveries and export will probably fail. If you have checked the <b>"move flightplans"</b> checkbox, the generated files will be copied directly to FGDATA. Exercise extreme caution, as this operation is likely to overwrite any existing flightplans.
 </p>
 <h4>Known issues:</h4>
-If you order the table by a column other than id and then apply filters, the table will be corrupted. To solve this, simply order by id again, click <b>Show</b> then order by the column you want. The table will display normally.
+If you order the table by a column other than id and then apply filters, the table may become corrupted. To solve this, simply order by id again, click <b>Show</b> then order by the column you want. The table will display normally.
 <br/>
 <h3>Getting more help and reporting bugs</h3>
 
