--- a/help.html
+++ b/help.html
@@ -56,6 +56,8 @@ Double click a table field to edit it, when you are finished press <b>Enter</b>.
 </p>
 <p>The <b>Find hubs</b> function will open a new window containing airport and flights number statistics. The airports with most flights will be displayed at the top, in descending order. The only filter options available for this function are airline and aircraft type.
 </p>
+<p>The <b>Find aircraft types</b> function will open a new window containing aircraft ICAO type codes and flights number statistics. The aircraft with most flights will be displayed at the top, in descending order. For this function to work you must specify an airline code in the filter field.
+</p>
 <p>In the <i>Aircraft types</i> tab, the button <b>Add missing aircraft</b> will trigger a database check for all aircraft types present in the flight schedules table, and add those missing into the table <i>aircraft</i>.
 </p>
 <p>Fleet designation column color coding: <b>GREEN</b>=model livery was found in FGDATA path; <b>RED</b>=model livery was not found. If all entries in the <i>Designation</i> column are red, check you FGDATA path in the <b>settings</b> file. It is most likely wrong.
